prediciton + mail
